cv image positioning fixes, normalising margins/spacing, cv links open in new tab

--- a/src/components/Cv.scss
+++ b/src/components/Cv.scss
@@ -96,6 +96,7 @@
             &.offset-top{
                 top: auto;
                 bottom: 100%;
+                bottom: calc( 100% + 0.2rem );
             }        
         //     width: 100%;
         //     height: 33vh;
